# S1App

./: .gitignore  README.md  docker-compose.yml  enable-docker-prereqs.ps1
.docker-config/buildx/activity/: default
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  railway.json  requirements-dev.txt  requirements.txt
backend/.venv2/: pyvenv.cfg
backend/.venv2/Scripts/: activate  activate.bat
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: __init__.py  admin.py  auth.py  generators.py  modes.py  progress.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/generators/core/: base.py  registry.py  types.py
backend/app/models/: __init__.py  generator.py  progress.py  session.py  task.py  user.py
backend/app/schemas/: auth.py  generator.py  progress.py  session.py
backend/app/services/: asset_service.py  auth_service.py  evaluation_engine.py  generator_registry_service.py  progress_service.py  session_service.py
backend/app/utils/: weighted.py
backend/scripts/: generator_stress_test.py  init_db.py
backend/tests/: conftest.py  test_api_modes.py  test_asset_service.py  test_evaluation.py  test_generators.py
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md
frontend/: .dockerignore  .env.example  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  main.tsx
frontend/src/components/: AppLayout.tsx  MathText.tsx  ProblemCard.tsx  RequireAdmin.tsx  RequireAuth.tsx
frontend/src/pages/: AdminPage.tsx  ExamPage.tsx  (+9 more)
(+3 files in other folders)
