[project]
name = "s1-eksamen-backend"
version = "0.1.0"
description = "MVP backend for S1 eksamenstrening"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.116.1",
  "uvicorn[standard]==0.35.0",
  "sqlalchemy==2.0.38",
  "alembic==1.15.2",
  "pydantic==2.11.1",
  "pydantic-settings==2.8.1",
  "python-jose[cryptography]==3.4.0",
  "passlib[bcrypt]==1.7.4",
  "bcrypt==4.0.1",
  "python-multipart==0.0.20",
  "sympy==1.13.3",
  "numpy==2.2.4",
  "matplotlib==3.10.1",
  "scipy==1.15.2",
  "rapidfuzz==3.12.2",
  "email-validator==2.2.0",
  "psycopg[binary]==3.2.6",
  "boto3==1.37.37"
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.5",
  "httpx==0.28.1",
  "pytest-cov==6.0.0",
  "ruff==0.11.2"
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
